// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`month date input: date-input 1`] = `
Object {
  "gridKeys": Array [
    "0-blank",
    "1-blank",
    "2-blank",
    "3-blank",
    "4-blank",
    "5-day",
    "6-day",
    "7-day",
    "8-day",
    "9-day",
    "10-day",
    "11-day",
    "12-day",
    "13-day",
    "14-day",
    "15-day",
    "16-day",
    "17-day",
    "18-day",
    "19-day",
    "20-day",
    "21-day",
    "22-day",
    "23-day",
    "24-day",
    "25-day",
    "26-day",
    "27-day",
    "28-day",
    "29-day",
    "30-day",
    "31-day",
    "32-day",
    "33-day",
    "34-day",
    "35-day",
    "36-blank",
    "37-blank",
    "38-blank",
    "39-blank",
    "40-blank",
    "41-blank",
  ],
  "month": "2021-10",
}
`;

exports[`next month button: next-month 1`] = `
Object {
  "gridKeys": Array [
    "0-blank",
    "1-blank",
    "2-blank",
    "3-blank",
    "4-blank",
    "5-blank",
    "6-day",
    "7-day",
    "8-day",
    "9-day",
    "10-day",
    "11-day",
    "12-day",
    "13-day",
    "14-day",
    "15-day",
    "16-day",
    "17-day",
    "18-day",
    "19-day",
    "20-day",
    "21-day",
    "22-day",
    "23-day",
    "24-day",
    "25-day",
    "26-day",
    "27-day",
    "28-day",
    "29-day",
    "30-day",
    "31-day",
    "32-day",
    "33-day",
    "34-day",
    "35-day",
    "36-day",
    "37-blank",
    "38-blank",
    "39-blank",
    "40-blank",
    "41-blank",
  ],
  "month": "2022-01",
}
`;

exports[`previous month button: previous-month 1`] = `
Object {
  "gridKeys": Array [
    "0-blank",
    "1-day",
    "2-day",
    "3-day",
    "4-day",
    "5-day",
    "6-day",
    "7-day",
    "8-day",
    "9-day",
    "10-day",
    "11-day",
    "12-day",
    "13-day",
    "14-day",
    "15-day",
    "16-day",
    "17-day",
    "18-day",
    "19-day",
    "20-day",
    "21-day",
    "22-day",
    "23-day",
    "24-day",
    "25-day",
    "26-day",
    "27-day",
    "28-day",
    "29-day",
    "30-day",
    "31-blank",
    "32-blank",
    "33-blank",
    "34-blank",
  ],
  "month": "2021-11",
}
`;

exports[`snapshot before interaction: before-interaction 1`] = `
Object {
  "gridKeys": Array [
    "0-blank",
    "1-blank",
    "2-blank",
    "3-day",
    "4-day",
    "5-day",
    "6-day",
    "7-day",
    "8-day",
    "9-day",
    "10-day",
    "11-day",
    "12-day",
    "13-day",
    "14-day",
    "15-day",
    "16-day",
    "17-day",
    "18-day",
    "19-day",
    "20-day",
    "21-day",
    "22-day",
    "23-day",
    "24-day",
    "25-day",
    "26-day",
    "27-day",
    "28-day",
    "29-day",
    "30-day",
    "31-day",
    "32-day",
    "33-day",
    "34-blank",
  ],
  "month": "2021-12",
}
`;
